--- a/VoucherManagementSystem/appsettings.Development.json
+++ b/VoucherManagementSystem/appsettings.Development.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=VoucherDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    "DefaultConnection": "Server=localhost;Database=VoucherManagementDB;Trusted_Connection=True;TrustServerCertificate=True;"
+    //  "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=VoucherManagementDB;Trusted_Connection=True;Encrypt=Ture;TrustServerCertificate=True;"
   },
   "Logging": {
     "LogLevel": {
@@ -11,6 +12,6 @@
   "AllowedHosts": "*",
   "AdminCredentials": {
     "Username": "admin",
-    "Password": "admin123"
+    "Password": "allah"
   }
 }
